--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -1,5 +1,5 @@
 .navbar{
-    background-color: #E81818;
+    background-color: var(--red);
     display: flex;
     padding: 1rem 1.5rem;
     width: 100%;
