--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,12 @@
 :root{
-  --white: #ffffff;
+  --red: #E81818;
+  --white:#DEDEDE
 }
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
+  font-family: 'Ubuntu', sans-serif;
   -moz-osx-font-smoothing: grayscale;
 }
 
@@ -14,6 +14,9 @@ h2{
   margin:0;
   text-align: center;
   margin-top: 5rem;
+}
+h2, label{
+  color: var(--white)
 }
 
 *{
@@ -40,18 +43,51 @@ h2{
 .join-form{
   background-color: #24272F;
   padding: 3rem;
-  margin: 1rem 12rem;
+  margin: .5rem auto;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
 }
 
+#name, #room{
+  padding: .8rem 1rem;
+  margin: .5rem 0rem 1rem 0rem;
+  background-color: #DEDEDE;
+  border: none;
+  border-radius: 5px;
+}
+#name:focus, #room:focus{
+  background-color: #F3F3F3;
+  outline: none;
+}
+
+#btn-join{
+  background-color: var(--red);
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 1rem 8rem;
+  color: var(--white);
+  cursor: pointer;
+  box-shadow: 0px 0px 30px rgba(255, 38, 38, 0.3);
+  font-size: 24px;
+  font-weight: 700;
+  text-rendering: geometricPrecision;
+  margin-top: 1.5rem;
+}
+
 html, body, #root, #root>div {
-  height: 100%;
+  height: 100%!important;
   margin: 0;
 } 
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media only screen and (max-width: 482px) {
+  #btn-join{
+    padding: 1rem 2rem;
+  }
 }
