--- a/client/src/Pages/Chat/style.css
+++ b/client/src/Pages/Chat/style.css
@@ -7,18 +7,20 @@
     justify-content: center;
 }
 #interface-content{
-    height: calc(100vh - 15rem);
+    height: calc(100vh - 12rem);
     width: calc(100vw - 15rem);
-    display: flex;
+    display: flex;    
+    margin-top:2rem;
     flex-direction: column;
 }
 #chat{
-    background-color: #35353C;
-    padding: 2.5rem;
+    background-color: var(--gray);
+    padding: 1.5rem;
     width: 100%;
     flex: 1;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
+    overflow-y: auto;
 }
 #msg-form{
     display: flex;
@@ -36,4 +38,65 @@
 #btn-send{
     background: none;
     cursor: pointer;
+}
+.msg-body{
+    background-color: var(--white);
+    padding: 1rem 1rem .5rem 1rem;
+    color: black;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-right: calc(100% - 20rem);
+    margin-bottom: 1.5rem;
+}
+.user{
+    margin-left: calc(100% - 20rem);
+    margin-right: 0;
+    background-color: var(--red);
+}
+
+.user .msg-name{
+    display: none;
+}
+.user .msg-content{
+    color: var(--white);
+}
+
+.msg-name{
+    color: var(--red);
+    font-weight: bold;
+}
+.msg-content{
+    color: var(--dark);
+    font-weight: 500;
+    margin-top: .5rem;
+}
+@media only screen and (max-width: 670px) {
+    .msg-body{
+        padding: .5rem .5rem .3rem .5rem;
+        margin-right: calc(100% - 13rem);
+        margin-bottom: 1.5rem;
+    }
+    .user{
+        margin-left: calc(100% - 13rem);
+        margin-right: 0;
+        background-color: var(--red);
+    }
+    #interface-content{
+        height: calc(100vh - 13rem);
+        width: calc(100vw - 2rem);
+        display: flex;    
+        margin-top:0rem;
+        flex-direction: column;
+    }
+    footer p{
+        font-size: 13px;
+        margin-top: 1rem;
+    }
+    #msg-form{
+        padding: .8rem 1rem;
+    }
+    #msg-form .input{
+        padding: .5rem 1rem;
+        margin-right: 1rem;
+    }
 }
